# synapse

./: .gitignore  AGENTS.md  README.md  pyproject.toml  rd_meeting_智能体交互走查记录.md
.github/workflows/: ci.yml  notarize-test.yml  release-dryrun.yml  release.yml
apps/setup-center/: DIFF.md  package-lock.json  package.json
apps/setup-center/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/setup-center/src-tauri/capabilities/: default.json
apps/setup-center/src-tauri/src/: crash_handler.rs  main.rs
dev/: agents.md.template_202606  flight_result_21881451.txt  flight_result_loadtablegroup_diff.txt  reset_scope_auto_split_failed.py
docs-site/.vitepress/: version.json
docs/badges/: platform-stats-products.json  platform-stats-tickets.json
docs/localization/: 前端TypeScript清理改造方案-noUnusedLocals与研发云模块.md  开源版本1.27.17-1.27.18向本地定制版本同步优化改造方案.md  开源版本1.27.18-1.27.19向本地定制版本同步优化改造方案.md  开源版本1.27.19-1.27.20向本地定制版本同步优化改造方案.md  开源版本1.27.20-1.27.21向本地定制版本同步优化改造方案.md  开源版本1.27.21-1.27.22向本地定制版本同步优化改造方案.md  开源版本1.27.22-1.27.23向本地定制版本同步优化改造方案.md  开源版本1.27.23-1.27.24向本地定制版本同步优化改造方案.md
docs/synapse/: 会议室重启与停止方案.md
identity/: CREDITS.md  SYSTEM_TASKS.yaml.template
identity/runtime/: user.profile.core.md
plugins/: README.md
scripts/: _analyze_rd_expert_tokens.py  _compare_flight_row.py  _dump_flight_result.py  _scan_buildresults.py  brand_synapse_tree.py  cursor_agent_cli_diag.py  probe_project_fields.py  reset_meeting_to_auto_split.py  reset_scope_to_code_commit.py  reset_scope_to_req_risk.py  sync_platform_stats_badges.py  sync_upstream_file.py  test_auto_split_21926690.py  test_hooks_21881451_stage2_split.py  test_task_impact_11928032.py
tests/: interaction-refactor-test-plan.md
(+524 files in other folders)
